--- a/mirror-frontend/package.json
+++ b/mirror-frontend/package.json
@@ -15,6 +15,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.0",
+    "react-router-hash-link": "^2.4.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
