Fix SonarCloud organization key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Required metadata
-sonar.organization=Y.C. Pandigama
+sonar.organization=yrcd27
 sonar.projectKey=Yrcd27_Mirror
 
 # Optional (but helpful)
